--- a/Projekt_Topmotive.ipynb
+++ b/Projekt_Topmotive.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[12064 rows x 8 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "[104500 rows x 30 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
        "4      O                         ET(Öle/Schmierstoffe)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -853,18 +853,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bei der Tabelle Belege konnte beobachetet werden (gilt für alle Daten in der Tabelle mit 1,3mln Zeilen):\n",
+    "Bei der Tabelle Belege konnte beobachetet werden :\n",
     "\n",
-    "1. GENARTNR: Diese Spalte hat negative Werte als Minimum und recht hohe positive Werte als Maximum. Es wäre wichtig,  zu überprüfen, ob negative Werte sinnvoll sind.\n",
-    "2. BELEGDATUM, ERSTZULASSUNG sind Datumsangaben, die als Ganzzahlen formatiert sind (z.B. 20220404 für den 4. April 2022)\n",
-    "3. KMSTAND: Das Maximum für \"KMSTAND\" ist extrem hoch (etwa 10 Millionen). Es könnte sinnvoll sein, solche extremen Werte genauer zu untersuchen, da sie Ausreißer oder Fehler sein könnten.\n",
-    "4. Programmvariant: Fast alle Werte in dieser Spalte scheinen \"100\" zu sein (aber es gibt einige wenige andere Werte das Maximum ist 104)\n",
-    "5. Fehlende Werte: Nicht alle Spalten haben den gleichen count, was darauf hinweist, dass es fehlende Werte gibt. Zum Beispiel hat \"GENARTNR\" nur 535674 Einträge\n"
+    "1. BELEGDATUM, ERSTZULASSUNG, Fzg_anlage_datum, Belegerstelltam, Beleggedrucktam sind Datumsangaben in numerischem Format YYYYMMDD. Der Großteil der Daten liegt zwischen 2022 und 2023. Es gibt jedoch einige ungewöhnliche Mindestwerte, wie 1.010100e+04 für ERSTZULASSUNG, es wäre der 1. Januar 2001.\n",
+    "2. KTypNr: Die Werte variieren stark, mit einem Median von 22555 und einem Maximum von 153369\n",
+    "3. KMSTAND: Der Durchschnittskilometerstand liegt bei ca. 131.626 km. Das Maximum von ca. 9.582.192 km scheint ungewöhnlich hoch und könnte ein Ausreißer oder ein Fehler sein.\n",
+    "4. GENARTNR: Die Werte variieren erheblich, und es gibt negative Werte (wie das Minimum von -7528), die ungewöhnlich erscheinen.\n",
+    "5. MWST_Prozent: Die Mehrwertsteuer liegt größtenteils bei 19%, mit Schwankungen zwischen 0% und 20%.\n",
+    "6. Programmvariant: Fast alle Werte liegen bei 100, aber es gibt einige wenige Abweichungen bis zu einem Maximum von 104.\n",
+    "7. Es gibt Spalten mit fehlenden Werten:\n",
+    "    BELEGDATUM: 103158\n",
+    "    ERSTZULASSUNG: 100953\n",
+    "    GENARTNR: 41107\n",
+    "    PLZ: 99429\n",
+    "    Fzg_anlage_datum: 100532\n",
+    "    Belegerstelltam: 100448\n",
+    "    Beleggedrucktam: 93877\n",
+    "    Programmvariant: 103157\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -889,9 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bei der Tabelle PosArt konnte beobachetet werden:\n",
-    "\n",
-    "1. Die Daten scheinen gleich mit Tabelle Belege zu sein"
+    "Bei der Tabelle PosArt konnten keine Auffälligkeiten beobachetet werden."
    ]
   }
  ],
