Erlaeuterung der Datenmerkmale

--- a/Projekt_Topmotive.ipynb
+++ b/Projekt_Topmotive.ipynb
@@ -5,19 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BI Projekt - Topmotive"
+    "##BI Projekt - Topmotive"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zugriff auf die Daten:"
+    "#Zugriff auf die Daten:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[12064 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +241,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Erläuterung den Datenmerkmale der Tabelle TM_WA_Verrechnungssätze.csv (df_Verrechnung)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LocalID: GUID einer einzelnen Werkstatt\n",
+    "AWArt: Arbeitswerte Art Kürzel\n",
+    "AWArt_Bez: Bezeichnung der Arbeitswerte Art\n",
+    "VKPreis: Verkaufspreis für ein AW\n",
+    "VKPreis_Brutto: Verkaufspreis Brutto für ein AW\n",
+    "EKPreis: Einkaufspreis für ein AW\n",
+    "AWMinuten: Anzahl Minuten pro AW (Arbeitswert)\n",
+    "c_date: Anlieferungsdatum der Daten"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +295,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>LocalID</th>\n",
+       "      <th>ï»¿LocalID</th>\n",
        "      <th>BELEG_ART</th>\n",
        "      <th>BELEGDATUM</th>\n",
        "      <th>KTypNr</th>\n",
@@ -476,7 +497,7 @@
        "      <td>20190423.0</td>\n",
        "      <td>86091</td>\n",
        "      <td>E</td>\n",
-       "      <td>Motoröl Liqui Moly Longlife 5W30 4200</td>\n",
+       "      <td>MotorËl Liqui Moly Longlife 5W30 4200</td>\n",
        "      <td>3224.0</td>\n",
        "      <td>...</td>\n",
        "      <td>49661</td>\n",
@@ -568,7 +589,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                     LocalID BELEG_ART  BELEGDATUM  KTypNr  \\\n",
+       "                                  ï»¿LocalID BELEG_ART  BELEGDATUM  KTypNr  \\\n",
        "0       0007BD7B-6934-4893-B971-CCA4857B1789         R  20230706.0   11877   \n",
        "1       0007BD7B-6934-4893-B971-CCA4857B1789         R  20230709.0  119580   \n",
        "2       0007BD7B-6934-4893-B971-CCA4857B1789         R  20230601.0   34951   \n",
@@ -602,7 +623,7 @@
        "4                                          WISCHBLATT     298.0  ...   \n",
        "...                                               ...       ...  ...   \n",
        "104495                              Abgasuntersuchung       NaN  ...   \n",
-       "104496          Motoröl Liqui Moly Longlife 5W30 4200    3224.0  ...   \n",
+       "104496         MotorËl Liqui Moly Longlife 5W30 4200    3224.0  ...   \n",
        "104497                 OELABLASS-SCHR. 14X1,5 VW/SEAT     593.0  ...   \n",
        "104498                          Filter, Innenraumluft     424.0  ...   \n",
        "104499                               Inspektion klein       NaN  ...   \n",
@@ -649,7 +670,7 @@
        "[104500 rows x 30 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,8 +681,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Erläuterung den Datenmerkmale der Tabelle TM_WA_Belege_sample.csv (df_Belege)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LocalID: GUID einer einzelnen Werkstatt\n",
+    "BelegID: ID, welche innerhalb einer Werkstatt die Positionen zu einem Vorgang zusammenfast\n",
+    "BELEG_ART: Typ des Beleges; R = Rechnung, G = Gutschrift\n",
+    "BELEGDATUM: Datum des Beleges\n",
+    "KTypNr: Fahrzeugtyp ID des betreffenden Kunden Fahrzeuges\n",
+    "Fzg_Hersteller: Fahrzeug Hersteller des Fahrzeuges\n",
+    "ERSTZULASSUNG: Erstzulassung des betreffenden Kunden Fahrzeuges\n",
+    "KMSTAND: Kilometerstand/Fahrleistung des betreffenden Kunden Fahrzeuges; 0: nicht angegeben\n",
+    "POS_ART: Typ/Art der einzelnen Position ->key_PosArt.csv\n",
+    "TEXT1: Erster Text für die einzelne Position\n",
+    "GENARTNR: ID der Produktgruppe für ET. Nicht immer vorhanden\n",
+    "GENART_BEZ: Bezeichnung der Produktgruppe\n",
+    "Menge: \n",
+    "Mengeneinheit: Mengeneinheit zur Menge\n",
+    "VK_Preis: Verkaufspreis\n",
+    "MWST_Prozent: Mehrwertsteuer\n",
+    "Minuten_pro_AW: Anzahl Minuten pro AW (Arbeitswert)\n",
+    "PLZ: PLZ der Werkstatt\n",
+    "EKPreis: Einkaufspreis\n",
+    "Pos_Text2: Text 2 für die einzelne Position\n",
+    "Fzg_anlage_datum: Anlage Datum des betreffenden Kunden Fahrzeuges\n",
+    "RechEmpfPLZ: PLZ des Rechnungsempfängers\n",
+    "RechEmpfAnrede: Anrede des Rechnungsempfängers\n",
+    "RechEmpfhatEMail: EMail Adresse vorhanden vom Rechnungsempfänger JA/NEIN\n",
+    "RechEmpfhatMobil: Mobil-Nummer vorhanden vom Rechnungsempfänger JA/NEIN\n",
+    "RechEmpfmitGeburtstag: Geburtstag vorhanden vom Rechnungsempfänger JA/NEIN\n",
+    "Belegerstelltam: Erstellungsdatum des Beleges\n",
+    "Beleggedrucktam: Datum des Ausdruckes des Beleges\n",
+    "Hatbelegversicherdaten: Versicherungsdaten vorhanden JA/NEIN\n",
+    "RechEmpfistVersichert: Ist Rechnungsempfänger versichert JA/NEIN\n",
+    "Programmvariant: Version des Werkstatt Programmes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +793,7 @@
        "4      O                         ET(Öle/Schmierstoffe)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,6 +801,21 @@
    "source": [
     "df_PosArt = pd.read_csv('Key_PosArt.csv', on_bad_lines='skip', encoding='ISO-8859–1', delimiter=\";\")\n",
     "df_PosArt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Erläuterung den Datenmerkmale der Tabelle Key_PosArt.csv (df_PosArt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PosArt: Typ/Art der einzelnen Position\n",
+    "Bezeichnung: Bezeichnung der PosArt"
    ]
   },
   {
@@ -764,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
