Erlaeuterung der Datenmerkmale

--- a/Projekt_Topmotive.ipynb
+++ b/Projekt_Topmotive.ipynb
@@ -5,14 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##BI Projekt - Topmotive"
+    "#BI Projekt - Topmotive"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Zugriff auf die Daten:"
+    "##Zugriff auf die Daten:"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Erläuterung den Datenmerkmale der Tabelle TM_WA_Verrechnungssätze.csv (df_Verrechnung)"
+    "##Erläuterung den Datenmerkmale der Tabelle TM_WA_Verrechnungssätze.csv (df_Verrechnung)"
    ]
   },
   {
@@ -252,12 +252,19 @@
    "metadata": {},
    "source": [
     "LocalID: GUID einer einzelnen Werkstatt\n",
+    "\n",
     "AWArt: Arbeitswerte Art Kürzel\n",
+    "\n",
     "AWArt_Bez: Bezeichnung der Arbeitswerte Art\n",
+    "\n",
     "VKPreis: Verkaufspreis für ein AW\n",
+    "\n",
     "VKPreis_Brutto: Verkaufspreis Brutto für ein AW\n",
+    "\n",
     "EKPreis: Einkaufspreis für ein AW\n",
+    "\n",
     "AWMinuten: Anzahl Minuten pro AW (Arbeitswert)\n",
+    "\n",
     "c_date: Anlieferungsdatum der Daten"
    ]
   },
@@ -684,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Erläuterung den Datenmerkmale der Tabelle TM_WA_Belege_sample.csv (df_Belege)"
+    "##Erläuterung den Datenmerkmale der Tabelle TM_WA_Belege_sample.csv (df_Belege)"
    ]
   },
   {
@@ -692,35 +699,65 @@
    "metadata": {},
    "source": [
     "LocalID: GUID einer einzelnen Werkstatt\n",
+    "\n",
     "BelegID: ID, welche innerhalb einer Werkstatt die Positionen zu einem Vorgang zusammenfast\n",
+    "\n",
     "BELEG_ART: Typ des Beleges; R = Rechnung, G = Gutschrift\n",
+    "\n",
     "BELEGDATUM: Datum des Beleges\n",
+    "\n",
     "KTypNr: Fahrzeugtyp ID des betreffenden Kunden Fahrzeuges\n",
+    "\n",
     "Fzg_Hersteller: Fahrzeug Hersteller des Fahrzeuges\n",
+    "\n",
     "ERSTZULASSUNG: Erstzulassung des betreffenden Kunden Fahrzeuges\n",
+    "\n",
     "KMSTAND: Kilometerstand/Fahrleistung des betreffenden Kunden Fahrzeuges; 0: nicht angegeben\n",
+    "\n",
     "POS_ART: Typ/Art der einzelnen Position ->key_PosArt.csv\n",
+    "\n",
     "TEXT1: Erster Text für die einzelne Position\n",
+    "\n",
     "GENARTNR: ID der Produktgruppe für ET. Nicht immer vorhanden\n",
+    "\n",
     "GENART_BEZ: Bezeichnung der Produktgruppe\n",
-    "Menge: \n",
+    "\n",
+    "Menge: Menge\n",
+    "\n",
     "Mengeneinheit: Mengeneinheit zur Menge\n",
+    "\n",
     "VK_Preis: Verkaufspreis\n",
+    "\n",
     "MWST_Prozent: Mehrwertsteuer\n",
+    "\n",
     "Minuten_pro_AW: Anzahl Minuten pro AW (Arbeitswert)\n",
+    "\n",
     "PLZ: PLZ der Werkstatt\n",
+    "\n",
     "EKPreis: Einkaufspreis\n",
+    "\n",
     "Pos_Text2: Text 2 für die einzelne Position\n",
+    "\n",
     "Fzg_anlage_datum: Anlage Datum des betreffenden Kunden Fahrzeuges\n",
+    "\n",
     "RechEmpfPLZ: PLZ des Rechnungsempfängers\n",
+    "\n",
     "RechEmpfAnrede: Anrede des Rechnungsempfängers\n",
+    "\n",
     "RechEmpfhatEMail: EMail Adresse vorhanden vom Rechnungsempfänger JA/NEIN\n",
+    "\n",
     "RechEmpfhatMobil: Mobil-Nummer vorhanden vom Rechnungsempfänger JA/NEIN\n",
+    "\n",
     "RechEmpfmitGeburtstag: Geburtstag vorhanden vom Rechnungsempfänger JA/NEIN\n",
+    "\n",
     "Belegerstelltam: Erstellungsdatum des Beleges\n",
+    "\n",
     "Beleggedrucktam: Datum des Ausdruckes des Beleges\n",
+    "\n",
     "Hatbelegversicherdaten: Versicherungsdaten vorhanden JA/NEIN\n",
+    "\n",
     "RechEmpfistVersichert: Ist Rechnungsempfänger versichert JA/NEIN\n",
+    "\n",
     "Programmvariant: Version des Werkstatt Programmes"
    ]
   },
@@ -807,7 +844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Erläuterung den Datenmerkmale der Tabelle Key_PosArt.csv (df_PosArt)"
+    "##Erläuterung den Datenmerkmale der Tabelle Key_PosArt.csv (df_PosArt)"
    ]
   },
   {
@@ -815,6 +852,7 @@
    "metadata": {},
    "source": [
     "PosArt: Typ/Art der einzelnen Position\n",
+    "\n",
     "Bezeichnung: Bezeichnung der PosArt"
    ]
   },
