Datentyp und O Werte prüfen

--- a/Projekt_Topmotive.ipynb
+++ b/Projekt_Topmotive.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[12064 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "[104500 rows x 30 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "4      O                         ET(Öle/Schmierstoffe)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,9 +860,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Statistik zu den Daten durchführen:\n",
-    "\n",
-    "\n",
+    "##Deskriptive Statistik:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "count: Anzahl der nicht fehlenden (nicht-NA/null) Einträge.\n",
     "\n",
     "mean: Der Durchschnittswert der Einträge.\n",
@@ -882,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1019,6 +1023,187 @@
    "metadata": {},
    "source": [
     "Bei der Tabelle PosArt konnten keine Auffälligkeiten beobachetet werden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Datentyp prüfen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Datentyp der Tabelle df_Verrechnung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LocalID           object\n",
+       "AWArt             object\n",
+       "AWArt_Bez         object\n",
+       "VKPreis           object\n",
+       "VKPreis_Brutto    object\n",
+       "EKPreis           object\n",
+       "AWMinuten         object\n",
+       "c_date            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_Verrechnung.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auffäligkeiten:\n",
+    "\n",
+    "1. Potentiell Falsche Datentypen für Preise und Minuten:\n",
+    "\n",
+    "VKPreis (Verkaufspreis), VKPreis_Brutto (Bruttoverkaufspreis) und EKPreis (Einkaufspreis) könnten numerische Werte enthalten, sind aber als object typisiert. Normalerweise würden diese Daten als float (für Dezimalzahlen) oder int (für ganze Zahlen) erwarten, je nachdem, ob sie Dezimalstellen enthalten oder nicht.\n",
+    "\n",
+    "AWMinuten (Anzahl Minuten pro Arbeitswert) scheint ebenfalls ein numerischer Wert zu sein, ist aber als object klassifiziert. Man würde erwarten, dass dies eine ganze Zahl (int) ist.\n",
+    "\n",
+    "2. c_date als Objekt:\n",
+    "c_date (Anlieferungsdatum der Daten) sollte wahrscheinlich als Datum typisiert sein, ist aber als object angegeben. Dies deutet darauf hin, dass es als String repräsentiert wird."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Datentyp der Tabelle df_Belege"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df_Belege.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auffäligkeiten:\n",
+    "\n",
+    "1. Gemischte Datentypen: Einige Spalten, die numerische Werte oder Datumsangaben enthalten sollten, sind als object typisiert. Dies deutet üblicherweise darauf hin, dass sie Textdaten oder gemischte Datentypen enthalten. Beispielsweise:\n",
+    "\n",
+    "BELEGDATUM, ERSTZULASSUNG, Fzg_anlage_datum, Belegerstelltam, Beleggedrucktam sollten wahrscheinlich Datumsangaben sein, sind aber als float64 typisiert.\n",
+    "\n",
+    "Menge, VK_Preis, EKPreis könnten numerische Werte sein, sind aber als object typisiert.\n",
+    "\n",
+    "2. Nicht-Numerische Spalten: LocalID, BELEG_ART, Fzg_Hersteller, POS_ART, TEXT1, GENART_BEZ, Mengeneinheit, RechEmpfAnrede, RechEmpfhatEMail, RechEmpfhatMobil, RechEmpfmitGeburtstag, RechEmpfistVersichert, hatbelegversicherdaten (diese Spalten kategorische oder textbasierte Daten enthalten)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Missing Values (0 Werte)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fehlende Werte bei df_Verrechnung:\n",
+      "                Total\n",
+      "AWArt            4079\n",
+      "VKPreis             5\n",
+      "VKPreis_Brutto      5\n",
+      "EKPreis             5\n",
+      "AWMinuten           5\n",
+      "LocalID             0\n",
+      "AWArt_Bez           0\n",
+      "c_date              0\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = df_Verrechnung.isnull().sum().sort_values(ascending=False)\n",
+    "missing_data = pd.concat([total], axis=1, keys=['Total'])\n",
+    "print(\"Fehlende Werte bei df_Verrechnung:\")\n",
+    "print(missing_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fehlende Werte bei df_Belege:\n",
+      "                        Total\n",
+      "Mengeneinheit           67789\n",
+      "GENART_BEZ              63953\n",
+      "GENARTNR                63393\n",
+      "Fzg_Hersteller          17108\n",
+      "Beleggedrucktam         10623\n",
+      "RechEmpfAnrede           7079\n",
+      "PLZ                      5071\n",
+      "Belegerstelltam          4052\n",
+      "Fzg_anlage_datum         3968\n",
+      "ERSTZULASSUNG            3547\n",
+      "RechEmpfhatMobil         1842\n",
+      "RechEmpfhatEMail         1842\n",
+      "RechEmpfmitGeburtstag    1842\n",
+      "Pos_Text2                1578\n",
+      "Programmvariant          1343\n",
+      "hatbelegversicherdaten   1342\n",
+      "RechEmpfistVersichert    1342\n",
+      "BELEGDATUM               1342\n",
+      "RechEmpfPLZ               436\n",
+      "TEXT1                     313\n",
+      "EKPreis                     1\n",
+      "ï»¿LocalID                  0\n",
+      "BELEG_ART                   0\n",
+      "MWST_Prozent                0\n",
+      "VK_Preis                    0\n",
+      "Menge                       0\n",
+      "POS_ART                     0\n",
+      "KMSTAND                     0\n",
+      "KTypNr                      0\n",
+      "Minuten_pro_AW              0\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = df_Belege.isnull().sum().sort_values(ascending=False)\n",
+    "missing_data = pd.concat([total], axis=1, keys=['Total'])\n",
+    "print(\"Fehlende Werte bei df_Belege:\")\n",
+    "print(missing_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es ist wichtig zu beachten, dass 0 Wert muss nicht unbedingt fehlende Werte repräsentieren!"
    ]
   }
  ],
