Datentyp und O Werte prüfen

--- a/Projekt_Topmotive.ipynb
+++ b/Projekt_Topmotive.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[12064 rows x 8 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "[104500 rows x 30 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "4      O                         ET(Öle/Schmierstoffe)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1036,12 +1036,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Datentyp der Tabelle df_Verrechnung"
+    "###Datentyp der Tabelle df_Verrechnung"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,12 +1087,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Datentyp der Tabelle df_Belege"
+    "###Datentyp der Tabelle df_Belege"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ï»¿LocalID                 object\n",
+       "BELEG_ART                  object\n",
+       "BELEGDATUM                float64\n",
+       "KTypNr                      int64\n",
+       "Fzg_Hersteller             object\n",
+       "ERSTZULASSUNG             float64\n",
+       "KMSTAND                     int64\n",
+       "POS_ART                    object\n",
+       "TEXT1                      object\n",
+       "GENARTNR                  float64\n",
+       "GENART_BEZ                 object\n",
+       "Menge                      object\n",
+       "Mengeneinheit              object\n",
+       "VK_Preis                   object\n",
+       "MWST_Prozent                int64\n",
+       "Minuten_pro_AW             object\n",
+       "PLZ                       float64\n",
+       "EKPreis                    object\n",
+       "Pos_Text2                  object\n",
+       "Fzg_anlage_datum          float64\n",
+       "RechEmpfPLZ                object\n",
+       "RechEmpfAnrede             object\n",
+       "RechEmpfhatEMail           object\n",
+       "RechEmpfhatMobil           object\n",
+       "RechEmpfmitGeburtstag      object\n",
+       "Belegerstelltam           float64\n",
+       "Beleggedrucktam           float64\n",
+       "hatbelegversicherdaten     object\n",
+       "RechEmpfistVersichert      object\n",
+       "Programmvariant           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_Belege.dtypes"
    ]
@@ -1121,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
