Neue Struktur des Dokuments

--- a/Projekt_Topmotive.ipynb
+++ b/Projekt_Topmotive.ipynb
@@ -5,6 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[TOC]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#BI Projekt - Topmotive"
    ]
   },
@@ -17,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +237,7 @@
        "[12064 rows x 8 columns]"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +684,7 @@
        "[104500 rows x 30 columns]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +837,7 @@
        "4      O                         ET(Öle/Schmierstoffe)"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -920,13 +927,13 @@
     "Bei der Tabelle Verrechnung konnte beobachetet werden:\n",
     "\n",
     "1. Für \"AWArt\" gibt es nur 7985 Einträge, was bedeutet, dass es einige fehlende Daten in dieser Spalte gibt.\n",
-    "2. Einige Spalten für \"LocalID\" sind nicht eindeutig (da \"unique\" weniger ist als \"count\"). Das könnte ein Zeichen für redundante Daten oder Fehler sein.\n",
-    "3. Die Spalte \"EKPreis\" hat einen häufigsten Wert von \"0,00\", der 9908 Mal auftritt. Dies könnte darauf hinweisen, dass viele Artikel kostenlos sind oder dass fehlende/unaufgefüllte Werte als \"0,00\" markiert sind."
+    "2. Einige Spalten für \"LocalID\" sind nicht eindeutig (da \"unique\" weniger ist als \"count\"). Das könnte ein Zeichen für redundante Daten, aber bei nähere Betrachutng der Tabelle konnte festgestellt werden, dass die einzlne Werkstätte (selbe LokalID) verschiedene Arbeiten durchführen (AWArt). Es ist anzunehmen, dass LokalID primär Schlussel ist und AWArt der sekundär Schlussel.\n",
+    "3. Die Spalte \"EKPreis\" hat einen häufigsten Wert von \"0,00\", der 9908 Mal auftritt. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1065,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1233,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -2532,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
